# crossCompilingBlinkRPI

./: .gitignore  .gitmodules  Blink.c  BreathingLED.c  CMakeLists.txt  CMakeLists_WiringPi.txt  ColorfulSoftlight.cpp  SteppingMotor.c  Sweep.c  Tablelamp.c  build.sh  configure.sh  copyCMakeListsWiringPi.sh  extractCompiler.sh  toolchain-rpi.cmake  transferToPi.sh
.github/workflows/: CI.yml
include/: CMakeLists.txt
